--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "lodash.clonedeep": "^4.5.0",
     "next": "13.4.12",
+    "proptypes": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.64.2"
+    "sass": "^1.64.2",
+    "swr": "^2.2.0"
   }
 }
